welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:25: error: not found: value color
  	if ((getCouleurSol()==Color.green && col == color.green)||(getCouleurSol() == color.pink && col = color.pink)){
                                                    ^SlugSnail:25: error: not found: value color
  	if ((getCouleurSol()==Color.green && col == color.green)||(getCouleurSol() == color.pink && col = color.pink)){
                                                                                      ^SlugSnail:25: error: not found: value color
  	if ((getCouleurSol()==Color.green && col == color.green)||(getCouleurSol() == color.pink && col = color.pink)){
                                                                                                          ^